Update TravelApp.java